WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12500
SVG fails to correctly handle all link style selectors
https://bugs.webkit.org/show_bug.cgi?id=12500
Summary
SVG fails to correctly handle all link style selectors
Eric Seidel (no email)
Reported
2007-01-31 04:34:21 PST
SVG fails to correctly handle all link style selectors see test case.
Attachments
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2007-02-06 07:47:38 PST
Actually, this might just be another symptom of
bug 12567
.
Rob Buis
Comment 2
2007-03-12 13:32:43 PDT
Landed in rLanded in
r20122
..
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug