        Reviewed by Nikolas Zimmermann.

http://bugs.webkit.org/show_bug.cgi?id=12500
        SVG fails to correctly handle all link style selectors
        http://bugs.webkit.org/show_bug.cgi?id=12567
        <text> elements ignore <a> children

        Allow <a> inside svg text and handle xlink:show.



Canonical link: https://commits.webkit.org/16923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20122 268f45cc-cd09-0410-ab3c-d52691b4dbfc