WebCore/ksvg2/svg/SVGAElement.h
@@ -53,6 +53,8 @@ namespace WebCore {
 
         virtual void defaultEventHandler(Event *evt);
 
+        virtual bool childShouldCreateRenderer(Node*) const;
+
     protected:
         virtual const SVGElement* contextElement() const { return this; }
 
