WebCore/ksvg2/svg/SVGTextContentElement.h
@@ -48,6 +48,7 @@ namespace WebCore {
         virtual ~SVGTextContentElement();
         
         virtual bool isValid() const { return SVGTests::isValid(); }
+        virtual bool isTextContent() const { return true; }
 
         // 'SVGTextContentElement' functions
         long getNumberOfChars() const;
